src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
    --header-height: 60px;
    --header-height-mobile: 90px;
    --sidebar-width: 330px;
    --sidebar-width-tablet: 280px;

    /* Css variables for conversation theme */
    /* Default theme */
    --sender-light-text-color: #fff;
    --sender-light-background-color: #0099ff;
    --sender-dark-text-color: #fff;
    --sender-dark-background-color: #0e92eb;
    --receiver-light-text-color: #000;
    --receiver-light-background-color: #f0f0f0;
    --receiver-dark-text-color: #fff;
    --receiver-dark-background-color: #303030;
    --background-theme-light-background: #fff;
    --background-theme-light-header-color: #ffffff;
    --background-theme-light-footer-color: #ffffff;
    --background-theme-dark-background: #212223;
    --background-theme-dark-header-color: #212223;
    --background-theme-dark-footer-color: #212223;
    --reply-message-light-background-color: #f6f6f6;
    --reply-message-dark-background-color: #8383838d;
}

@layer base {
    h1 {
        @apply text-4xl;
    }

    h2 {
        @apply text-2xl;
    }

    h3 {
        @apply text-xl;
    }
}

@keyframes scale-up {
    0% {
        transform: scale(1);
    }
    50% {
        transform: scale(1.15);
    }
    100% {
        transform: scale(1);
    }
}

.animate-scale-up {
    animation: scale-up 0.6s ease-in-out;
}

html {
    scroll-behavior: smooth;
    font-size: 15px;
}

html *::-webkit-scrollbar {
    border-radius: 0;
    width: 6px;
}

html {
    background-color: #fff;
    ::-webkit-scrollbar-thumb {
        border-radius: 4px;
        background-color: rgba(22, 24, 35, 0.3);
    }

    *::-webkit-scrollbar-track {
        border-radius: 0;
        background-color: #fff !important;
    }
}

html.dark {
    background-color: #1e1e1e;
    ::-webkit-scrollbar-thumb {
        border-radius: 4px;
        background-color: rgba(255, 255, 255, 0.2);
    }

    *::-webkit-scrollbar-track {
        border-radius: 0;
        background-color: transparent !important;
    }
}

html.dark .tippy-box {
    background-color: rgb(208, 208, 208);
    border-radius: 8px;
    font-weight: 400;
    font-size: 12px;
    color: #000;
}

html .tippy-box * {
    font-size: 13px;
}

html.dark .tippy-arrow {
    color: rgb(208, 208, 208);
}

body {
    font-family: 'Segoe UI', Helvetica, Arial, sans-serif !important;
    font-style: normal;
    font-weight: 400;
}

body {
    overflow-x: hidden;
    overflow-y: overlay;
}

body.ReactModal__Body--open {
    overflow-y: hidden;
}

@layer utilities {
    .flex-center {
        @apply flex items-center justify-center;
    }
}

.overlay {
    position: fixed;
    top: 0;
    right: 0;
    left: 0;
    bottom: 0;
    background-color: rgba(0, 0, 0, 0.5);
    z-index: 99;
    display: block;
}

.modal {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    border-radius: 10px;
    z-index: 999;
    outline: none;
}

.ReactModal__Overlay {
    opacity: 0;
    transition: opacity 200ms ease-in-out;
}

.ReactModal__Overlay--after-open {
    opacity: 1;
}

.ReactModal__Overlay--before-close {
    opacity: 0;
}

.animate-scale {
    animation: scale 0.3s ease-in-out;
}

.typing {
    align-items: center;
    display: flex;
    height: 17px;
}

.typing .dot {
    animation: mercuryTypingAnimation 1.8s infinite ease-in-out;
    background-color: #d3d3d3;
    border-radius: 50%;
    height: 5px;
    width: 5px;
    margin-right: 4px;
    vertical-align: middle;
    display: inline-block;
}
.typing .dot:nth-child(1) {
    animation-delay: 200ms;
}
.typing .dot:nth-child(2) {
    animation-delay: 300ms;
}
.typing .dot:nth-child(3) {
    animation-delay: 400ms;
}
.typing .dot:last-child {
    margin-right: 0;
}

@keyframes mercuryTypingAnimation {
    0% {
        transform: translateY(0px);
        background-color: #d3d3d3;
    }
    28% {
        transform: translateY(-7px);
        background-color: #d3d3d3;
    }
    44% {
        transform: translateY(0px);
        background-color: #d3d3d3;
    }
}

